--- a/p3_github-profiles.html
+++ b/p3_github-profiles.html
@@ -68,7 +68,7 @@
 			<div class="header-wrapper">
 				<div class="logo-wrap">
 					<a href="index.html" class="hover-target animsition-link">
-						<h6 class="fullscreen-image no-blur" style="font-weight: 1000;">Portfolio</h6></a>
+						<h6 class="fullscreen-image no-blur" style="font-weight: 1000;">The Guy with Glasses</h6>
 				</div>
 				<div class="nav-but-wrap">
 					<div class="menu-icon hover-target">
