--- a/p1_notes-app.html
+++ b/p1_notes-app.html
@@ -7,7 +7,7 @@
 	<!-- Basic Page Needs
 	================================================== -->
 	<meta charset="utf-8">
-	<title>Home</title>
+	<title>Notes App</title>
 	<meta name="description"  content="Chinmay Mulay's Portfolio" />
 	<meta name="author" content="Chinmay Mulay">
 	<meta name="keywords"  content="website, design, html5, css3, jquery, creative, clean, animated, portfolio, multi-page" />
@@ -44,7 +44,7 @@
 	<link rel="stylesheet" href="css/animsition.min.css"/>
 	<link rel="stylesheet" href="css/swiper.min.css"/>
 	<link rel="stylesheet" href="css/style.css"/>
-
+			
 	<!-- Favicons
 	================================================== -->
 	<link rel="icon" type="image/png" href="favicon.jpg">
@@ -52,23 +52,23 @@
 	<link rel="apple-touch-icon" sizes="72x72" href="apple-touch-icon-72x72.jpg">
 	<link rel="apple-touch-icon" sizes="114x114" href="apple-touch-icon-114x114.jpg">
 	
+	
 </head>
 <body>
 
 	<!-- Page preloader wrap
 	================================================== -->
 
-	<div class="animsition">
+	<div class="animsition">	
 		
 		<!-- Nav and Logo
 		================================================== -->
 
-		<header class="cd-header">
+		<header class="cd-header cursor-show">
 			<div class="header-wrapper">
 				<div class="logo-wrap">
-					<a href="index.php" class="hover-target animsition-link">
+					<a href="index.html" class="hover-target animsition-link">
 						<h6 class="fullscreen-image no-blur" style="font-weight: 1000;">The Guy with Glasses</h6>
-					</a>
 				</div>
 				<div class="nav-but-wrap">
 					<div class="menu-icon hover-target">
@@ -82,11 +82,11 @@
 
 		<div class="nav">
 			<div class="nav__content">
-				<div class="curent-page-name-shadow">About</div>
+				<div class="curent-page-name-shadow">Projects</div>
 				<ul class="nav__list">
-					<li class="nav__list-item active-nav"><a href="index.php" class="hover-target animsition-link">About</a></li>
-					<li class="nav__list-item"><a href="projects.php" class="hover-target animsition-link">Projects</a></li>
-					<li class="nav__list-item"><a href="contact.php" class="hover-target animsition-link">Contact</a></li>
+					<li class="nav__list-item"><a href="index.html" class="hover-target animsition-link">About</a></li>
+					<li class="nav__list-item active-nav"><a href="projects.html" class="hover-target animsition-link">Projects</a></li>
+					<li class="nav__list-item"><a href="contact.html" class="hover-target animsition-link">Contact</a></li>
 				</ul>
 			</div>
 		</div>	
@@ -94,81 +94,87 @@
 		<!-- Primary Page Layout
 		================================================== -->	
 
-		<div class="shadow-title parallax-top-shadow">About</div>
+		<div class="shadow-title parallax-top-shadow">Notes-App</div>
 		
 		<div class="section padding-page-top padding-bottom over-hide z-bigger">
 			<div class="container z-bigger">
 				<div class="row page-title px-5 px-xl-2">
-
-					<h1>
-						<div class="col-12 parallax-fade-top ">
-							<h1>Hello, I'm Chinmay Mulay.</h1>
-						</div>
-  					</h1>
-					<div class="offset-1 col-11 parallax-fade-top mt-2 mt-sm-3">
-						<p>
-							<a href="projects.php" class="typewrite" data-period="1500" data-type='[ "I&apos;m a CS Student", "I&apos;m a tech enthusiast.", "I like to explore, learn new things." ]'>
-								<span class="wrap"></span>
-							</a>
-						</p>
+					<div class="col-12 parallax-fade-top">
+						<h1>Nota - The Note Taking App</h1>
 					</div>
 				</div>
-				<div class="col-lg-7 padding-top" data-scroll-reveal="enter bottom move 30px over 0.5s after 0.2s">
-					<blockquote class="blockquote">
-						<p class="lead-big color-white mb-0"><em>Let's invent tomorrow, rather than worrying about what happened yesterday.</em></p>
-						<h6 class="mt-5"> - Steve Jobs</h6>
-					</blockquote>
-				</div>	
 			</div>
 		</div>
 
 		<div class="section padding-bottom-big over-hide z-bigger">
 			<div class="container">
-				<div class="row px-5 px-xl-2">
-					<div class="col-12 padding-top">
-						<h3>What I can do</h3>	
+				<div class="row px-5 px-xl-2 justify-content-center">
+					<div class="col-lg-8 mb-5 text-center">
+						<p class="mb-0 pb-0 lead">Nota is a simple and clean note taking app which gives you materially designed minimal note taking experience which helps you to stay focused.</p>
 					</div>
-					<div class="col-12 mt-2 mb-5 page-title-small">
-						<p class="mb-0 pb-0">Hands on </p>	
-					</div>	
-					<div class="col-md-4" data-scroll-reveal="enter bottom move 30px over 0.5s after 0.1s">	
-						<ul class="studio-list">
-							<li><p>C | CPP</p></li>
-							<li><p>HTML CSS </p></li>
-							<li><p>JS PHP</p></li>
-							<li><p>Java | Advance Java</p></li>
-							<li><p>VB.NET</p></li>
-						</ul>	
-					</div>	
-					<div class="col-md-4" data-scroll-reveal="enter bottom move 30px over 0.5s after 0.15s">	
-						<ul class="studio-list">
-							<li><p>Google Assistant Developer</p></li>
-							<li><p>Android Developer [Java]</p></li>
-							<li><p>iOS Developer [Swift 5 - Moderate]</p></li>
-							<li><p>Python Developer</p></li>
-							<li><p>Machine Learning</p></li>
-						</ul>	
+					<div class="col-lg-12 mb-5 text-center">
+						<h5 class="mb-3" style="font-weight: bold; font-size: x-large"><u>Features</u></h5>
 					</div>
-					<div class="col-md-4" data-scroll-reveal="enter bottom move 30px over 0.5s after 0.15s">	
-						<ul class="studio-list">
-							<li><p>Database: MySQL, Access, Oracle, SQLite</p></li>
-							<li><p>Database: Firebase, AWS, MongoDB [Beginner]</p></li>
-							<li><p>Video Editing [FCPX & Adobe Premiere Pro]</p></li>
-							<li><p>Audio Production [Adobe Audition]</p></li>
-							<li><p>Designer [Adobe Illustrator & Adobe XD]</p></li>
-						</ul>	
+					<div class="col-md-4 mb-5 text-center" data-scroll-reveal="enter bottom move 30px over 0.5s after 0.2s">
+						<h5 class="mb-3">Note Space</h5>
+						<p class="mb-0 pb-0">Keeps all your notes at one place, makes it available right when you need them.</p>	
+					</div>
+					<div class="col-md-4 mb-5 text-center" data-scroll-reveal="enter bottom move 30px over 0.5s after 0.2s">
+						<h5 class="mb-3">Data and Security</h5>
+						<p class="mb-0 pb-0">Notes [Notes Data] are saved on your Local Machine.</p>	
+					</div>
+					<div class="col-md-4 mb-5 text-center" data-scroll-reveal="enter bottom move 30px over 0.5s after 0.2s">
+						<h5 class="mb-3">100% Secure</h5>
+						<p class="mb-0 pb-0"> Your thoughts truely yours (No Cloud Connectivity)</p>	
+					</div>
+
+					<div class="col-md-4 mb-5 text-center" data-scroll-reveal="enter bottom move 30px over 0.5s after 0.2s">
+						<h5 class="mb-3">Search Notes</h5>	
+						<p class="mb-0 pb-0"> Search by note title or by any word noted on any note</p>	
+					</div>
+					<div class="col-md-4 mb-5 text-center" data-scroll-reveal="enter bottom move 30px over 0.5s after 0.2s">
+						<h5 class="mb-3">Sort Notes</h5>
+						<p class="mb-0 pb-0">Notes can be sorted by Alphabetically, Last Edited, or Recently Drafted</p>	
+					</div>
+					<div class="col-md-4 mb-5 text-center" data-scroll-reveal="enter bottom move 30px over 0.5s after 0.2s">
+						<h5 class="mb-3">Delete Note</h5>	
+						<p class="mb-0 pb-0"> Deletes permanently.</p>	
+					</div>
+					<div class="col-lg-12 mb-5 text-center">
+						<h5 class="mb-3" style="font-weight: bold; font-size: x-large;"><u>Project Studio</u></h5>
+					</div>
+					<div class="col-md-6 mb-5" data-scroll-reveal="enter bottom move 30px over 0.5s after 0.2s">
+						<div class="img-wrap">
+							<img src="img/projects/notes_app/web_home.png" alt="">
+						</div>	
+					</div>	
+					<div class="col-md-6 mb-5" data-scroll-reveal="enter bottom move 30px over 0.5s after 0.2s">
+						<div class="img-wrap">
+							<img src="img/projects/notes_app/web_note.png" alt="">
+						</div>	
+					</div>
+					
+					<div class="col-lg-10 mb-5 text-center">
+						<p class="mb-0 pb-0 lead">This project is still under development and will improve it's functionality and scale over time. Currently, working on and focused at UI improvements and mobile optimisation, this project uses <a href="https://www.npmjs.com/package/uuid">one</a> third party library. <br/> This project is <a href="https://github.com/cmulay/Notes-App/blob/master/LICENSE"> licensed </a>under MIT.</p>
+					</div>
+					<div class="col-md-4 mb-5 text-center" data-scroll-reveal="enter bottom move 30px over 0.5s after 0.2s">
+						<h5 class="mb-3"><a href="https://github.com/cmulay/Notes-App.git">Visit Project Repo</a></h5>
+					</div>
+					<div class="col-md-4 mb-5 text-center" data-scroll-reveal="enter bottom move 30px over 0.5s after 0.2s">
+						<h5 class="mb-3"><a href="https://cmulay-notesapp.netlify.app/">Preview Project</a></h5>
 					</div>
 				</div>		
-			</div>				
+			</div>			
 		</div>
 
+		
 		<div class="section padding-top-bottom over-hide z-bigger background-dark-3 footer">
-			<div class="shadow-on-footer" data-scroll-reveal="enter bottom move 30px over 0.5s after 0.1s">Say Hello</div>
+			<div class="shadow-on-footer" data-scroll-reveal="enter bottom move 30px over 0.5s after 0.1s">To-Do App</div>
 			<div class="container" data-scroll-reveal="enter bottom move 20px over 0.5s after 0.4s">
 				<div class="row">
 					<div class="col-12 text-center z-bigger py-5">
 						<div class="footer-lines">
-							<a href="contact.php" class="hover-target animsition-link"><h4>Have a Project?</h4></a>
+							<a href="p2_to-do-app.html" class="hover-target animsition-link"><h4>Next Project</h4></a>
 						</div>
 					</div>
 				</div>
@@ -179,14 +185,13 @@
 		================================================== -->
 		
 		<div class="social-fixed">
-			<i class="hover-target fa fa-github" aria-hidden="true">
-				<a href="https://github.com/cmulay" class="hover-target"> GitHub</a>
-			</i>
+			<a href="https://github.com/cmulay" class="hover-target">GitHub</a>
 		</div>
 		<div class="copyr">
-			2020 &copy; <a href="https://github.com/cmulay" class="hover-target">Chinmay Mulay</a>
+			2020 © <a href="https://github.com/cmulay" class="hover-target">Chinmay Mulay</a>
 		</div>
 		<div class="scroll-to-top hover-target"></div>
+		
 		<!-- Page cursor
 		================================================== -->
 		
@@ -200,12 +205,11 @@
 	<!-- JAVASCRIPT
     ================================================== -->
 	<script src="js/jquery.min.js"></script>
-	<script src="js/typewrite.js"></script>
 	<script src="js/popper.min.js"></script> 
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/plugins.js"></script> 
 	<script src="js/custom.js"></script>  
-
+	
 	<!-- Disable Right Click
 	================================================== -->
     <script language=JavaScript>
@@ -236,7 +240,6 @@
     
         document.oncontextmenu=new Function("alert(message);return false")
         </script>
-
 <!-- End Document
 ================================================== -->
 </body>
