--- a/p2_to-do-app.html
+++ b/p2_to-do-app.html
@@ -7,7 +7,7 @@
 	<!-- Basic Page Needs
 	================================================== -->
 	<meta charset="utf-8">
-	<title>GitHub Profiles</title>
+	<title>To-Do App</title>
 	<meta name="description"  content="Chinmay Mulay's Portfolio" />
 	<meta name="author" content="Chinmay Mulay">
 	<meta name="keywords"  content="website, design, html5, css3, jquery, creative, clean, animated, portfolio, multi-page" />
@@ -67,7 +67,7 @@
 		<header class="cd-header cursor-show">
 			<div class="header-wrapper">
 				<div class="logo-wrap">
-					<a href="index.php" class="hover-target animsition-link">
+					<a href="index.html" class="hover-target animsition-link">
 						<h6 class="fullscreen-image no-blur" style="font-weight: 1000;">The Guy with Glasses</h6>
 				</div>
 				<div class="nav-but-wrap">
@@ -84,9 +84,9 @@
 			<div class="nav__content">
 				<div class="curent-page-name-shadow">Projects</div>
 				<ul class="nav__list">
-					<li class="nav__list-item"><a href="index.php" class="hover-target animsition-link">About</a></li>
-					<li class="nav__list-item active-nav"><a href="projects.php" class="hover-target animsition-link">Projects</a></li>
-					<li class="nav__list-item"><a href="contact.php" class="hover-target animsition-link">Contact</a></li>
+					<li class="nav__list-item"><a href="index.html" class="hover-target animsition-link">About</a></li>
+					<li class="nav__list-item active-nav"><a href="projects.html" class="hover-target animsition-link">Projects</a></li>
+					<li class="nav__list-item"><a href="contact.html" class="hover-target animsition-link">Contact</a></li>
 				</ul>
 			</div>
 		</div>	
@@ -94,13 +94,13 @@
 		<!-- Primary Page Layout
 		================================================== -->	
 
-		<div class="shadow-title parallax-top-shadow">Github Profiles</div>
+		<div class="shadow-title parallax-top-shadow">To-Do-App</div>
 		
 		<div class="section padding-page-top padding-bottom over-hide z-bigger">
 			<div class="container z-bigger">
 				<div class="row page-title px-5 px-xl-2">
 					<div class="col-12 parallax-fade-top">
-						<h1>Browse - GitHub Profiles</h1>
+						<h1>ToDo App - Get things done.</h1>
 					</div>
 				</div>
 			</div>
@@ -110,51 +110,78 @@
 			<div class="container">
 				<div class="row px-5 px-xl-2 justify-content-center">
 					<div class="col-lg-8 mb-5 text-center">
-						<p class="mb-0 pb-0 lead">Github Profiles is a platform that displays GitHub profiles with modern material card design it using GitHub API with following features.</p>
+						<p class="mb-0 pb-0 lead">As the name suggests, To-Do App is a clean, modular looking To-Do list making app.</p>
 					</div>
 					<div class="col-lg-12 mb-5 text-center">
 						<h5 class="mb-3" style="font-weight: bold; font-size: x-large"><u>Features</u></h5>
 					</div>
 					<div class="col-md-4 mb-5 text-center" data-scroll-reveal="enter bottom move 30px over 0.5s after 0.2s">
-						<h5 class="mb-3">Search any GitHub profile by their username.</h5>	
+						<h5 class="mb-3">To-Do Space</h5>
+						<p class="mb-0 pb-0">Browse all your to-do's at one place, makes it available right when you need them.</p>	
 					</div>
 					<div class="col-md-4 mb-5 text-center" data-scroll-reveal="enter bottom move 30px over 0.5s after 0.2s">
-						<h5 class="mb-3">Displays User Information</h5>
+						<h5 class="mb-3">Data and Security</h5>
+						<p class="mb-0 pb-0">All to-do's are saved on your Local Machine.</p>	
 					</div>
 					<div class="col-md-4 mb-5 text-center" data-scroll-reveal="enter bottom move 30px over 0.5s after 0.2s">
-						<h5 class="mb-3">Displays User Profile Image.</h5>	
+						<h5 class="mb-3">100% Secure</h5>
+						<p class="mb-0 pb-0"> Your work, your business (No Cloud Connectivity)</p>	
 					</div>
 
 					<div class="col-md-4 mb-5 text-center" data-scroll-reveal="enter bottom move 30px over 0.5s after 0.2s">
-						<h5 class="mb-3">Displays User Bio.</h5>	
-						<p class="mb-0 pb-0"> If Bio is not kept, null will be returned.</p>	
+						<h5 class="mb-3">Strike To-Do</h5>	
+						<p class="mb-0 pb-0"> Strike To-Do when done with your task.</p>	
 					</div>
 					<div class="col-md-4 mb-5 text-center" data-scroll-reveal="enter bottom move 30px over 0.5s after 0.2s">
-						<h5 class="mb-3">Displays Followers, Following and Number of Repository.</h5>	
-						<p>One can directly visit the repo from the user's profile simply by clicking on the repo name.</p>
+						<h5 class="mb-3">Sorted To-Do</h5>
+						<p class="mb-0 pb-0">To-Do Default order set to First in First Order, manual priority control.</p>	
 					</div>
 					<div class="col-md-4 mb-5 text-center" data-scroll-reveal="enter bottom move 30px over 0.5s after 0.2s">
-						<h5 class="mb-3">Repositories are ordered alphabetically.</h5>
+						<h5 class="mb-3">Delete To-Do</h5>	
+						<p class="mb-0 pb-0"> Deletes permanently.</p>	
 					</div>
+
+					<div class="col-lg-12 mb-5 text-center">
+						<h5 class="mb-3" style="font-weight: bold; font-size: x-large;"><u>How to use</u></h5>
+					</div>
+					<div class="col-lg-10 mb-5 text-center">
+						<p class="mb-0 pb-0 lead">1. In the textbox note your To-Do and hit enter to add it to your list. <br/>2. Left click on the To-Do to mark it as done. <br/>3. Right click on the To-Do to delete it.</p>
+					</div>
+
 					<div class="col-lg-12 mb-5 text-center">
 						<h5 class="mb-3" style="font-weight: bold; font-size: x-large;"><u>Project Studio</u></h5>
 						<div class="img-wrap">
-							<img src="img/projects/github-profiles/gh-pro.png" alt="To-Do Screenshot">
+							<img src="img/projects/todo_app/homepage.png" alt="To-Do Screenshot">
 						</div>	
 					</div>
+						
 					
 					<div class="col-lg-10 mb-5 text-center">
-						<p class="mb-0 pb-0 lead">This project is closed.<br/> This project is not licensed sa it uses GitHub API.</p>
+						<p class="mb-0 pb-0 lead">This project is currently closed. But might see some improvements in it's functionality, working and UI overal. It is mobile friendly as well.<br/> This project is <a href="https://github.com/cmulay/To-Do-App/blob/master/LICENSE"> licensed </a>under MIT.</p>
 					</div>
 					<div class="col-md-4 mb-5 text-center" data-scroll-reveal="enter bottom move 30px over 0.5s after 0.2s">
-						<h5 class="mb-3"><a href="https://github.com/cmulay/github-profiles.git">Visit Project Repo</a></h5>
+						<h5 class="mb-3"><a href="https://github.com/cmulay/To-Do-App.git">Visit Project Repo</a></h5>
 					</div>
 					<div class="col-md-4 mb-5 text-center" data-scroll-reveal="enter bottom move 30px over 0.5s after 0.2s">
-						<h5 class="mb-3"><a href="https://cmulay-githubprofiles.netlify.app/">Preview Project</a></h5>
+						<h5 class="mb-3"><a href="https://cmulay-todoapp.netlify.app/">Preview Project</a></h5>
 					</div>
 				</div>		
 			</div>			
 		</div>
+
+		
+		<div class="section padding-top-bottom over-hide z-bigger background-dark-3 footer">
+			<div class="shadow-on-footer" data-scroll-reveal="enter bottom move 30px over 0.5s after 0.1s">GitHub Profiles</div>
+			<div class="container" data-scroll-reveal="enter bottom move 20px over 0.5s after 0.4s">
+				<div class="row">
+					<div class="col-12 text-center z-bigger py-5">
+						<div class="footer-lines">
+							<a href="p3_github-profiles.html" class="hover-target animsition-link"><h4>Next Project</h4></a>
+						</div>
+					</div>
+				</div>
+			</div>		
+		</div>	
 		
 		<!-- Social links
 		================================================== -->
@@ -184,7 +211,8 @@
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/plugins.js"></script> 
 	<script src="js/custom.js"></script>  
-	
+
+
 	<!-- Disable Right Click
 	================================================== -->
     <script language=JavaScript>
