--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
 	<!-- Basic Page Needs
 	================================================== -->
 	<meta charset="utf-8">
-	<title>Projects</title>
+	<title>Contact</title>
 	<meta name="description"  content="Chinmay Mulay's Portfolio" />
 	<meta name="author" content="Chinmay Mulay">
 	<meta name="keywords"  content="website, design, html5, css3, jquery, creative, clean, animated, portfolio, multi-page" />
@@ -54,7 +54,7 @@
 	
 	
 </head>
-<body class="over-hide">
+<body>
 
 	<!-- Page preloader wrap
 	================================================== -->
@@ -67,7 +67,7 @@
 		<header class="cd-header">
 			<div class="header-wrapper">
 				<div class="logo-wrap">
-					<a href="index.php" class="hover-target animsition-link">
+					<a href="index.html" class="hover-target animsition-link">
 						<h6 class="fullscreen-image no-blur" style="font-weight: 1000;">The Guy with Glasses</h6>
 					</a>
 				</div>
@@ -83,62 +83,77 @@
 
 		<div class="nav">
 			<div class="nav__content">
-				<div class="curent-page-name-shadow">Projects</div>
+				<div class="curent-page-name-shadow">Contact</div>
 				<ul class="nav__list">
-					<li class="nav__list-item"><a href="index.php" class="hover-target animsition-link">About</a></li>
-					<li class="nav__list-item active-nav"><a href="projects.php" class="hover-target animsition-link">Projects</a></li>
-					<li class="nav__list-item"><a href="contact.php" class="hover-target animsition-link">Contact</a></li>
+					<li class="nav__list-item"><a href="index.html" class="hover-target animsition-link">About</a></li>
+					<li class="nav__list-item "><a href="projects.html" class="hover-target animsition-link">Projects</a></li>
+					<li class="nav__list-item active-nav"><a href="contact.html" class="hover-target animsition-link">Contact</a></li>
 				</ul>
 			</div>
 		</div>	
 
+
 		<!-- Primary Page Layout
-		================================================== -->
+		================================================== -->	
+
+		<div class="shadow-title parallax-top-shadow">Hola</div>
 		
-		<div class="section full-height over-hide swiper-container z-bigger" id="hero-slider">
-			<ul class="swiper-wrapper case-study-wrapper">
-				<li class="swiper-slide full-height case-study-name">
-					<a href="p1_notes-app.php" class="hover-target animsition-link">
-						<h1>Notes App</h1>
-					</a>
-				</li>
-				<li class="swiper-slide full-height case-study-name">
-					<a href="p2_to-do-app.php" class="hover-target animsition-link">
-						<h1>To-Do App</h1>
-					</a>
-				</li>
-				<li class="swiper-slide full-height case-study-name">
-					<a href="p3_github-profiles.php" class="hover-target animsition-link">
-						<h1>GitHub Profiles</h1>
-					</a>
-				</li>
-			</ul>
-			
-			<!-- Background Images -->
-			<div class="swiper-scrollbar"></div>
+		<div class="section padding-page-top padding-bottom over-hide z-bigger">
+			<div class="container z-bigger">
+				<div class="row page-title px-5 px-xl-2">
+					<div class="col-12 parallax-fade-top">
+						<h1>Say Hello</h1>
+					</div>
+					<div class="offset-1 col-11 parallax-fade-top mt-2 mt-sm-3">
+						<p>get in touch</p>
+					</div>
+				</div>
+			</div>
 		</div>
-		
-		<!-- Slider background images
-		================================================== -->
-		
-		<ul class="case-study-images">
-			<li>
-				<div class="img-hero-background no-blur"></div> 
-				<h2 class="fullscreen-image no-blur">Notes App</h2>
-				<div class="hero-number">01</div> 
-				<div class="hero-number-fixed">03</div> 
-			</li>
-			<li>
-				<div class="img-hero-background no-blur"></div> 
-				<h2 class="fullscreen-image no-blur">To-Do App</h2>
-				<div class="hero-number">02</div> 
-			</li>
-			<li>
-				<div class="img-hero-background no-blur"></div> 
-				<h2 class="fullscreen-image no-blur">GitHub Profiles</h2>
-				<div class="hero-number">03</div> 
-			</li>
-		</ul>
+
+		<div class="section padding-bottom-big over-hide z-bigger">
+			<div class="container">
+				<div class="row px-5 px-xl-2">
+					<div class="col-lg-12">
+						<div class="row ajax-form">
+							<div class="col-md-6">
+								<input class="hover-target" name="name" type="text" placeholder="Your Name: *" autocomplete="off"/>
+							</div>	
+							<div class="col-md-6 mt-4 mt-md-0">
+								<input class="hover-target" name="email" type="email" placeholder="E-Mail: *" autocomplete="off"/>
+							</div>	
+							<div class="col-md-6 mt-4">
+								<input class="hover-target" name="phone" type="tel" placeholder="Phone Number:" autocomplete="off"/>
+							</div>	
+							<div class="col-md-6 mt-4">
+								<input class="hover-target" name="location" type="text" placeholder="City, Country:" autocomplete="off"/>
+							</div>
+							<div class="col-md-12 mt-4">
+								<textarea class="hover-target" name="message" placeholder="Message *"></textarea>
+							</div>
+							<div class="col-md-12 mt-4">
+								<center>
+									<button class="hover-target" id="send" data-lang="en"><span>submit</span></button>
+								</center>
+							</div>
+						</div>	
+					</div>
+				</div>		
+			</div>				
+		</div>
+
+		<div class="section padding-top-bottom over-hide z-bigger background-dark-3 footer">
+			<div class="shadow-on-footer" data-scroll-reveal="enter bottom move 30px over 0.5s after 0.1s">codewithchin@gmail.com</div>
+			<div class="container" data-scroll-reveal="enter bottom move 20px over 0.5s after 0.4s">
+				<div class="row">
+					<div class="col-12 text-center z-bigger py-5">
+						<div class="footer-lines">
+							<a href="mailto:codewithchin@gmail.com" class="hover-target"><h4>Email Me</h4></a>
+						</div>
+					</div>
+				</div>
+			</div>		
+		</div>	
 		
 		<!-- Social links
 		================================================== -->
@@ -149,14 +164,15 @@
 		<div class="copyr">
 			2020 © <a href="https://github.com/cmulay" class="hover-target">Chinmay Mulay</a>
 		</div>
+		<div class="scroll-to-top hover-target"></div>
 		
 		<!-- Page cursor
 		================================================== -->
 		
         <div class='cursor' id="cursor"></div>
         <div class='cursor2' id="cursor2"></div>
-        <div class='cursor3' id="cursor3"></div>
-
+        <div class='cursor3' id="cursor3"></div>		
+		
 	</div>
 
 	
