--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
 	
 	
 </head>
-<body oncontextmenu="return false" onkeydown="return false;" onmousedown="return false;">
+<body>
 
 	<!-- Page preloader wrap
 	================================================== -->
@@ -64,7 +64,7 @@
 		<!-- Nav and Logo
 		================================================== -->
 
-		<header class="cd-header">
+		<header class="cd-header" oncontextmenu="return false" onkeydown="return false;" onmousedown="return false;">
 			<div class="header-wrapper">
 				<div class="logo-wrap">
 					<a href="index.html" class="hover-target animsition-link">
@@ -81,7 +81,7 @@
 			</div>				
 		</header>
 
-		<div class="nav">
+		<div class="nav" oncontextmenu="return false" onkeydown="return false;" onmousedown="return false;">
 			<div class="nav__content">
 				<div class="curent-page-name-shadow">Contact</div>
 				<ul class="nav__list">
@@ -96,9 +96,9 @@
 		<!-- Primary Page Layout
 		================================================== -->	
 
-		<div class="shadow-title parallax-top-shadow">Hola</div>
+		<div class="shadow-title parallax-top-shadow" oncontextmenu="return false" onkeydown="return false;" onmousedown="return false;">Hola</div>
 		
-		<div class="section padding-page-top padding-bottom over-hide z-bigger">
+		<div class="section padding-page-top padding-bottom over-hide z-bigger" oncontextmenu="return false" onkeydown="return false;" onmousedown="return false;">
 			<div class="container z-bigger">
 				<div class="row page-title px-5 px-xl-2">
 					<div class="col-12 parallax-fade-top">
@@ -114,7 +114,7 @@
 		<div class="section padding-bottom-big over-hide z-bigger">
 			<div class="container">
 				<div class="row px-5 px-xl-2">
-					<div class="col-lg-12">
+					<div class="col-lg-12" >
 						<div class="row ajax-form">
 							<div class="col-md-6">
 								<input class="hover-target" name="name" type="text" placeholder="Your Name: *" autocomplete="off"/>
@@ -142,7 +142,7 @@
 			</div>				
 		</div>
 
-		<div class="section padding-top-bottom over-hide z-bigger background-dark-3 footer">
+		<div class="section padding-top-bottom over-hide z-bigger background-dark-3 footer" oncontextmenu="return false" onkeydown="return false;" onmousedown="return false;">
 			<div class="shadow-on-footer" data-scroll-reveal="enter bottom move 30px over 0.5s after 0.1s">codewithchin@gmail.com</div>
 			<div class="container" data-scroll-reveal="enter bottom move 20px over 0.5s after 0.4s">
 				<div class="row">
@@ -158,13 +158,13 @@
 		<!-- Social links
 		================================================== -->
 		
-		<div class="social-fixed">
+		<div class="social-fixed" oncontextmenu="return false" onkeydown="return false;" onmousedown="return false;">
 			<a href="https://github.com/cmulay" class="hover-target">GitHub</a>
 		</div>
-		<div class="copyr">
+		<div class="copyr" oncontextmenu="return false" onkeydown="return false;" onmousedown="return false;">
 			2020 © <a href="https://github.com/cmulay" class="hover-target">Chinmay Mulay</a>
 		</div>
-		<div class="scroll-to-top hover-target"></div>
+		<div class="scroll-to-top hover-target" oncontextmenu="return false" onkeydown="return false;" onmousedown="return false;"></div>
 		
 		<!-- Page cursor
 		================================================== -->
