--- a/contact.html
+++ b/contact.html
@@ -158,7 +158,7 @@
 		<!-- Social links
 		================================================== -->
 		
-		<div class="social-fixed" oncontextmenu="return false" onkeydown="return false;" onmousedown="return false;">
+		<div class="social-fixed fa fa-github" oncontextmenu="return false" onkeydown="return false;" onmousedown="return false;">
 			<a href="https://github.com/cmulay" class="hover-target">GitHub</a>
 		</div>
 		<div class="copyr" oncontextmenu="return false" onkeydown="return false;" onmousedown="return false;">
