--- a/p3_github-profiles.html
+++ b/p3_github-profiles.html
@@ -159,7 +159,7 @@
 		<!-- Social links
 		================================================== -->
 		
-		<div class="social-fixed">
+		<div class="social-fixed fa fa-github">
 			<a href="https://github.com/cmulay" class="hover-target">GitHub</a>
 		</div>
 		<div class="copyr">
