fix issues with footer

--- a/projects.html
+++ b/projects.html
@@ -143,7 +143,7 @@
 		<!-- Social links
 		================================================== -->
 		
-		<div class="social-fixed">
+		<div class="social-fixed fa fa-github">
 			<a href="https://github.com/cmulay" class="hover-target">GitHub</a>
 		</div>
 		<div class="copyr">
