removed unnecessary tags and changed typo color

--- a/index.html
+++ b/index.html
@@ -99,18 +99,13 @@
 		<div class="section padding-page-top padding-bottom over-hide z-bigger">
 			<div class="container z-bigger">
 				<div class="row page-title px-5 px-xl-2">
-
 					<h1>
 						<div class="col-12 parallax-fade-top ">
 							<h1>Hello, I'm Chinmay Mulay.</h1>
 						</div>
   					</h1>
 					<div class="offset-1 col-11 parallax-fade-top mt-2 mt-sm-3">
-						<p>
-							<a href="projects.html" class="typewrite" data-period="1500" data-type='[ "I&apos;m a CS Student", "I&apos;m a tech enthusiast.", "I like to explore, learn new things." ]'>
-								<span class="wrap"></span>
-							</a>
-						</p>
+							<p style="color:#1E90FF" class="typewrite" data-period="1500" data-type='[ "I&apos;m a CS Student", "I&apos;m a tech enthusiast.", "I like to explore, learn new things." ]'></p>
 					</div>
 				</div>
 				<div class="col-lg-7 padding-top" data-scroll-reveal="enter bottom move 30px over 0.5s after 0.2s">
