added new project to slider

--- a/projects.html
+++ b/projects.html
@@ -86,6 +86,7 @@
 				<div class="curent-page-name-shadow">Projects</div>
 				<ul class="nav__list">
 					<li class="nav__list-item"><a href="index.html" class="hover-target animsition-link">About</a></li>
+					<li class="nav__list-item"><a href="Blog.html" class="hover-target animsition-link">Blog</a></li>
 					<li class="nav__list-item active-nav"><a href="projects.html" class="hover-target animsition-link">Projects</a></li>
 					<li class="nav__list-item"><a href="contact.html" class="hover-target animsition-link">Contact</a></li>
 				</ul>
@@ -112,6 +113,11 @@
 						<h1>GitHub Profiles</h1>
 					</a>
 				</li>
+				<li class="swiper-slide full-height case-study-name">
+					<a href="p4_python_automation.html" class="hover-target animsition-link">
+						<h1>Python Automation Script</h1>
+					</a>
+				</li>
 			</ul>
 			
 			<!-- Background Images -->
@@ -126,7 +132,7 @@
 				<div class="img-hero-background no-blur"></div> 
 				<h2 class="fullscreen-image no-blur">Notes App</h2>
 				<div class="hero-number">01</div> 
-				<div class="hero-number-fixed">03</div> 
+				<div class="hero-number-fixed">04</div> 
 			</li>
 			<li>
 				<div class="img-hero-background no-blur"></div> 
@@ -137,6 +143,11 @@
 				<div class="img-hero-background no-blur"></div> 
 				<h2 class="fullscreen-image no-blur">GitHub Profiles</h2>
 				<div class="hero-number">03</div> 
+			</li>
+			<li>
+				<div class="img-hero-background no-blur"></div> 
+				<h2 class="fullscreen-image no-blur">Python Automation Script</h2>
+				<div class="hero-number">04</div> 
 			</li>
 		</ul>
 		
