--- a/p2_to-do-app.html
+++ b/p2_to-do-app.html
@@ -85,6 +85,7 @@
 				<div class="curent-page-name-shadow">Projects</div>
 				<ul class="nav__list">
 					<li class="nav__list-item"><a href="index.html" class="hover-target animsition-link">About</a></li>
+					<li class="nav__list-item"><a href="Blog.html" class="hover-target animsition-link">Blog</a></li>
 					<li class="nav__list-item active-nav"><a href="projects.html" class="hover-target animsition-link">Projects</a></li>
 					<li class="nav__list-item"><a href="contact.html" class="hover-target animsition-link">Contact</a></li>
 				</ul>
@@ -168,7 +169,6 @@
 				</div>		
 			</div>			
 		</div>
-
 		
 		<div class="section padding-top-bottom over-hide z-bigger background-dark-3 footer">
 			<div class="shadow-on-footer" data-scroll-reveal="enter bottom move 30px over 0.5s after 0.1s">GitHub Profiles</div>
