--- a/p3_github-profiles.html
+++ b/p3_github-profiles.html
@@ -85,6 +85,7 @@
 				<div class="curent-page-name-shadow">Projects</div>
 				<ul class="nav__list">
 					<li class="nav__list-item"><a href="index.html" class="hover-target animsition-link">About</a></li>
+					<li class="nav__list-item"><a href="Blog.html" class="hover-target animsition-link">Blog</a></li>
 					<li class="nav__list-item active-nav"><a href="projects.html" class="hover-target animsition-link">Projects</a></li>
 					<li class="nav__list-item"><a href="contact.html" class="hover-target animsition-link">Contact</a></li>
 				</ul>
@@ -155,6 +156,19 @@
 				</div>		
 			</div>			
 		</div>
+
+		<div class="section padding-top-bottom over-hide z-bigger background-dark-3 footer">
+			<div class="shadow-on-footer" data-scroll-reveal="enter bottom move 30px over 0.5s after 0.1s">Python Automation Script</div>
+			<div class="container" data-scroll-reveal="enter bottom move 20px over 0.5s after 0.4s">
+				<div class="row">
+					<div class="col-12 text-center z-bigger py-5">
+						<div class="footer-lines">
+							<a href="p4_python_automation.html" class="hover-target animsition-link"><h4>Next Project</h4></a>
+						</div>
+					</div>
+				</div>
+			</div>		
+		</div>	
 		
 		<!-- Social links
 		================================================== -->
