--- a/blog.html
+++ b/blog.html
@@ -84,7 +84,7 @@
 				<div class="curent-page-name-shadow">Blogs</div>
 				<ul class="nav__list">
 					<li class="nav__list-item"><a href="index.html" class="hover-target animsition-link">About</a></li>
-					<li class="nav__list-item active-nav"><a href="Blog.html" class="hover-target animsition-link">Blog</a></li>
+					<li class="nav__list-item"><a href="blog.html" class="hover-target animsition-link">Blog</a></li>
 					<li class="nav__list-item"><a href="projects.html" class="hover-target animsition-link">Projects</a></li>
 					<li class="nav__list-item"><a href="contact.html" class="hover-target animsition-link">Contact</a></li>
 				</ul>
