--- a/blog.html
+++ b/blog.html
@@ -63,11 +63,12 @@
 		
 		<!-- Nav and Logo
 		================================================== -->
-
 		<header class="cd-header">
 			<div class="header-wrapper">
 				<div class="logo-wrap">
-					<a href="index.html" class="hover-target animsition-link"><img src="img/logo.png" alt=""></a>
+					<a href="index.html" class="hover-target animsition-link">
+						<h6 class="fullscreen-image no-blur" style="font-weight: 1000;">The Guy with Glasses</h6>
+					</a>
 				</div>
 				<div class="nav-but-wrap">
 					<div class="menu-icon hover-target">
