--- a/blog.html
+++ b/blog.html
@@ -1,16 +1,20 @@
 ﻿<!DOCTYPE html>
 <!--[if IE 8]><html class="no-js lt-ie9" lang="en"> <![endif]-->
 <!--[if gt IE 8]>
-<!--><html class="no-js" lang="en"><!--<![endif]-->
+<!-->
+<html class="no-js" lang="en">
+<!--<![endif]-->
+
 <head>
 
 	<!-- Basic Page Needs
 	================================================== -->
 	<meta charset="utf-8">
 	<title>Blogs</title>
-	<meta name="description"  content="Chinmay Mulay's Portfolio" />
+	<meta name="description" content="Chinmay Mulay's Portfolio" />
 	<meta name="author" content="Chinmay Mulay">
-	<meta name="keywords"  content="website, design, html5, css3, jquery, creative, clean, animated, portfolio, multi-page" />
+	<meta name="keywords"
+		content="website, design, html5, css3, jquery, creative, clean, animated, portfolio, multi-page" />
 	<meta property="og:title" content="Chinmay Mulay's Portfolio" />
 	<meta property="og:type" content="website" />
 	<meta property="og:url" content="" />
@@ -28,39 +32,44 @@
 	<!-- Mobile Specific Metas
 	================================================== -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<meta name="theme-color" content="#212121"/>
-    <meta name="msapplication-navbutton-color" content="#212121"/>
-    <meta name="apple-mobile-web-app-status-bar-style" content="#212121"/>
+	<meta name="theme-color" content="#212121" />
+	<meta name="msapplication-navbutton-color" content="#212121" />
+	<meta name="apple-mobile-web-app-status-bar-style" content="#212121" />
 
 	<!-- Web Fonts 
 	================================================== -->
-	<link href="https://fonts.googleapis.com/css?family=Muli:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i&amp;subset=latin-ext,vietnamese" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&amp;subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext,vietnamese" rel="stylesheet">
-	
+	<link
+		href="https://fonts.googleapis.com/css?family=Muli:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i&amp;subset=latin-ext,vietnamese"
+		rel="stylesheet">
+	<link
+		href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&amp;subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext,vietnamese"
+		rel="stylesheet">
+
 	<!-- CSS
 	================================================== -->
-	<link rel="stylesheet" href="css/bootstrap.min.css"/>
-	<link rel="stylesheet" href="css/font-awesome.min.css"/>
-	<link rel="stylesheet" href="css/animsition.min.css"/>
-	<link rel="stylesheet" href="css/swiper.min.css"/>
-	<link rel="stylesheet" href="css/style.css"/>
-			
+	<link rel="stylesheet" href="css/bootstrap.min.css" />
+	<link rel="stylesheet" href="css/font-awesome.min.css" />
+	<link rel="stylesheet" href="css/animsition.min.css" />
+	<link rel="stylesheet" href="css/swiper.min.css" />
+	<link rel="stylesheet" href="css/style.css" />
+
 	<!-- Favicons
 	================================================== -->
 	<link rel="icon" type="image/png" href="favicon.jpg">
 	<link rel="apple-touch-icon" href="apple-touch-icon.jpg">
 	<link rel="apple-touch-icon" sizes="72x72" href="apple-touch-icon-72x72.jpg">
 	<link rel="apple-touch-icon" sizes="114x114" href="apple-touch-icon-114x114.jpg">
-	
-	
+
+
 </head>
+
 <body oncontextmenu="return false" onkeydown="return false;" onmousedown="return false;">
 
 	<!-- Page preloader wrap
 	================================================== -->
 
-	<div class="animsition">	
-		
+	<div class="animsition">
+
 		<!-- Nav and Logo
 		================================================== -->
 		<header class="cd-header">
@@ -75,9 +84,9 @@
 						<span class="menu-icon__line menu-icon__line-left"></span>
 						<span class="menu-icon__line"></span>
 						<span class="menu-icon__line menu-icon__line-right"></span>
-					</div>					
-				</div>					
-			</div>				
+					</div>
+				</div>
+			</div>
 		</header>
 
 		<div class="nav">
@@ -86,17 +95,19 @@
 				<ul class="nav__list">
 					<li class="nav__list-item"><a href="index.html" class="hover-target animsition-link">About</a></li>
 					<li class="nav__list-item"><a href="blog.html" class="hover-target animsition-link">Blog</a></li>
-					<li class="nav__list-item"><a href="projects.html" class="hover-target animsition-link">Projects</a></li>
-					<li class="nav__list-item"><a href="contact.html" class="hover-target animsition-link">Contact</a></li>
+					<li class="nav__list-item"><a href="projects.html" class="hover-target animsition-link">Projects</a>
+					</li>
+					<li class="nav__list-item"><a href="contact.html" class="hover-target animsition-link">Contact</a>
+					</li>
 				</ul>
 			</div>
-		</div>	
+		</div>
 
 		<!-- Primary Page Layout
 		================================================== -->
 
 		<div class="shadow-title parallax-top-shadow">Blogs</div>
-		
+
 		<div class="section padding-page-top padding-bottom over-hide z-bigger">
 			<div class="container z-bigger">
 				<div class="row page-title px-5 px-xl-2">
@@ -109,7 +120,7 @@
 				</div>
 			</div>
 		</div>
-		
+
 		<div class="section padding-bottom-big z-bigger over-hide">
 			<div class="container z-bigger">
 				<div class="row page-title px-5 px-xl-2">
@@ -117,22 +128,23 @@
 						<ul class="case-study-wrapper vertical-blog">
 							<li class="case-study-name mb-5">
 								<p class="hover-target nimsition-link">
-									<h2 class="mb-3" style="text-align: center; font-weight: 800;">Coming Soon</h2>
-									<h4 class="mb-3">Things that you will find useful, and those I want to share with you.</h4>
-								</p>	
+								<h2 class="mb-3" style="text-align: center; font-weight: 800;">Coming Soon</h2>
+								<h4 class="mb-3">Things that you will find useful, and those I want to share with you.
+								</h4>
+								</p>
 							</li>
 						</ul>
 					</div>
 				</div>
 			</div>
 		</div>
-		
+
 		<!-- Blog background images
 		================================================== -->
-		
+
 		<ul class="case-study-images">
 			<li>
-				<div class="img-hero-background blog-back-image" style="background-image: url('img/blog/1.jpg');"></div> 
+				<div class="img-hero-background blog-back-image" style="background-image: url('img/blog/1.jpg');"></div>
 			</li>
 			<li>
 				<div class="img-hero-background blog-back-image" style="background-image: url('img/blog/2.jpg');"></div>
@@ -141,56 +153,63 @@
 				<div class="img-hero-background blog-back-image" style="background-image: url('img/blog/3.jpg');"></div>
 			</li>
 			<li>
-				<div class="img-hero-background blog-back-image" style="background-image: url('img/blog/4.jpg');"></div> 
+				<div class="img-hero-background blog-back-image" style="background-image: url('img/blog/4.jpg');"></div>
 			</li>
 			<li>
-				<div class="img-hero-background blog-back-image" style="background-image: url('img/blog/5.jpg');"></div> 
+				<div class="img-hero-background blog-back-image" style="background-image: url('img/blog/5.jpg');"></div>
 			</li>
 			<li>
-				<div class="img-hero-background blog-back-image" style="background-image: url('img/blog/6.jpg');"></div> 
+				<div class="img-hero-background blog-back-image" style="background-image: url('img/blog/6.jpg');"></div>
 			</li>
 			<li>
-				<div class="img-hero-background blog-back-image" style="background-image: url('img/blog/7.jpg');"></div> 
+				<div class="img-hero-background blog-back-image" style="background-image: url('img/blog/7.jpg');"></div>
 			</li>
 			<li>
-				<div class="img-hero-background blog-back-image" style="background-image: url('img/blog/8.jpg');"></div> 
+				<div class="img-hero-background blog-back-image" style="background-image: url('img/blog/8.jpg');"></div>
 			</li>
 			<li>
-				<div class="img-hero-background blog-back-image" style="background-image: url('img/blog/9.jpg');"></div> 
+				<div class="img-hero-background blog-back-image" style="background-image: url('img/blog/9.jpg');"></div>
 			</li>
 		</ul>
-		
+
 		<!-- Social links
 		================================================== -->
-		
+
 		<div class="social-fixed">
-			<i class="hover-target fa fa-github" aria-hidden="true">
-				<a href="https://github.com/cmulay" class="hover-target"> GitHub</a>
-			</i>
+			<p>
+				<i class="hover-target fa fa-github" aria-hidden="true">
+					<a href="https://github.com/cmulay" class="hover-target">GitHub</a>
+				</i>
+				<i class="hover-target fa fa-linkedin" aria-hidden="true">
+					<a href="https://" class="hover-target">LinkedIn</a>
+				</i>
+			</p>
 		</div>
 		<div class="copyr">
 			2020 &copy; <a href="https://github.com/cmulay" class="hover-target">Chinmay Mulay</a>
 		</div>
 		<div class="scroll-to-top hover-target"></div>
+
 		<!-- Page cursor
 		================================================== -->
-		
-        <div class='cursor' id="cursor"></div>
-        <div class='cursor2' id="cursor2"></div>
-        <div class='cursor3' id="cursor3"></div>		
-		
+
+		<div class='cursor' id="cursor"></div>
+		<div class='cursor2' id="cursor2"></div>
+		<div class='cursor3' id="cursor3"></div>
+
 	</div>
 
 	<!-- JAVASCRIPT
     ================================================== -->
 	<script src="js/jquery.min.js"></script>
 	<script src="js/typewrite.js"></script>
-	<script src="js/popper.min.js"></script> 
+	<script src="js/popper.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
-	<script src="js/plugins.js"></script> 
-	<script src="js/custom.js"></script>  
+	<script src="js/plugins.js"></script>
+	<script src="js/custom.js"></script>
 
-<!-- End Document
+	<!-- End Document
 ================================================== -->
 </body>
+
 </html>
