--- a/contact.html
+++ b/contact.html
@@ -1,16 +1,20 @@
 ﻿<!DOCTYPE html>
 <!--[if IE 8]><html class="no-js lt-ie9" lang="en"> <![endif]-->
 <!--[if gt IE 8]>
-<!--><html class="no-js" lang="en"><!--<![endif]-->
+<!-->
+<html class="no-js" lang="en">
+<!--<![endif]-->
+
 <head>
 
 	<!-- Basic Page Needs
 	================================================== -->
 	<meta charset="utf-8">
 	<title>Contact</title>
-	<meta name="description"  content="Chinmay Mulay's Portfolio" />
+	<meta name="description" content="Chinmay Mulay's Portfolio" />
 	<meta name="author" content="Chinmay Mulay">
-	<meta name="keywords"  content="website, design, html5, css3, jquery, creative, clean, animated, portfolio, multi-page" />
+	<meta name="keywords"
+		content="website, design, html5, css3, jquery, creative, clean, animated, portfolio, multi-page" />
 	<meta property="og:title" content="Chinmay Mulay's Portfolio" />
 	<meta property="og:type" content="website" />
 	<meta property="og:url" content="" />
@@ -28,39 +32,44 @@
 	<!-- Mobile Specific Metas
 	================================================== -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<meta name="theme-color" content="#212121"/>
-    <meta name="msapplication-navbutton-color" content="#212121"/>
-    <meta name="apple-mobile-web-app-status-bar-style" content="#212121"/>
+	<meta name="theme-color" content="#212121" />
+	<meta name="msapplication-navbutton-color" content="#212121" />
+	<meta name="apple-mobile-web-app-status-bar-style" content="#212121" />
 
 	<!-- Web Fonts 
 	================================================== -->
-	<link href="https://fonts.googleapis.com/css?family=Muli:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i&amp;subset=latin-ext,vietnamese" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&amp;subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext,vietnamese" rel="stylesheet">
-	
+	<link
+		href="https://fonts.googleapis.com/css?family=Muli:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i&amp;subset=latin-ext,vietnamese"
+		rel="stylesheet">
+	<link
+		href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&amp;subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext,vietnamese"
+		rel="stylesheet">
+
 	<!-- CSS
 	================================================== -->
-	<link rel="stylesheet" href="css/bootstrap.min.css"/>
-	<link rel="stylesheet" href="css/font-awesome.min.css"/>
-	<link rel="stylesheet" href="css/animsition.min.css"/>
-	<link rel="stylesheet" href="css/swiper.min.css"/>
-	<link rel="stylesheet" href="css/style.css"/>
-			
+	<link rel="stylesheet" href="css/bootstrap.min.css" />
+	<link rel="stylesheet" href="css/font-awesome.min.css" />
+	<link rel="stylesheet" href="css/animsition.min.css" />
+	<link rel="stylesheet" href="css/swiper.min.css" />
+	<link rel="stylesheet" href="css/style.css" />
+
 	<!-- Favicons
 	================================================== -->
 	<link rel="icon" type="image/png" href="favicon.jpg">
 	<link rel="apple-touch-icon" href="apple-touch-icon.jpg">
 	<link rel="apple-touch-icon" sizes="72x72" href="apple-touch-icon-72x72.jpg">
 	<link rel="apple-touch-icon" sizes="114x114" href="apple-touch-icon-114x114.jpg">
-	
-	
+
+
 </head>
+
 <body>
 
 	<!-- Page preloader wrap
 	================================================== -->
 
-	<div class="animsition">	
-		
+	<div class="animsition">
+
 		<!-- Nav and Logo
 		================================================== -->
 
@@ -76,9 +85,9 @@
 						<span class="menu-icon__line menu-icon__line-left"></span>
 						<span class="menu-icon__line"></span>
 						<span class="menu-icon__line menu-icon__line-right"></span>
-					</div>					
-				</div>					
-			</div>				
+					</div>
+				</div>
+			</div>
 		</header>
 
 		<div class="nav" oncontextmenu="return false" onkeydown="return false;" onmousedown="return false;">
@@ -87,19 +96,23 @@
 				<ul class="nav__list">
 					<li class="nav__list-item"><a href="index.html" class="hover-target animsition-link">About</a></li>
 					<li class="nav__list-item"><a href="blog.html" class="hover-target animsition-link">Blog</a></li>
-					<li class="nav__list-item "><a href="projects.html" class="hover-target animsition-link">Projects</a></li>
-					<li class="nav__list-item active-nav"><a href="contact.html" class="hover-target animsition-link">Contact</a></li>
+					<li class="nav__list-item "><a href="projects.html"
+							class="hover-target animsition-link">Projects</a></li>
+					<li class="nav__list-item active-nav"><a href="contact.html"
+							class="hover-target animsition-link">Contact</a></li>
 				</ul>
 			</div>
-		</div>	
+		</div>
 
 
 		<!-- Primary Page Layout
-		================================================== -->	
+		================================================== -->
 
-		<div class="shadow-title parallax-top-shadow" oncontextmenu="return false" onkeydown="return false;" onmousedown="return false;">Hola</div>
-		
-		<div class="section padding-page-top padding-bottom over-hide z-bigger" oncontextmenu="return false" onkeydown="return false;" onmousedown="return false;">
+		<div class="shadow-title parallax-top-shadow" oncontextmenu="return false" onkeydown="return false;"
+			onmousedown="return false;">Hola</div>
+
+		<div class="section padding-page-top padding-bottom over-hide z-bigger" oncontextmenu="return false"
+			onkeydown="return false;" onmousedown="return false;">
 			<div class="container z-bigger">
 				<div class="row page-title px-5 px-xl-2">
 					<div class="col-12 parallax-fade-top">
@@ -115,19 +128,23 @@
 		<div class="section padding-bottom-big over-hide z-bigger">
 			<div class="container">
 				<div class="row px-5 px-xl-2">
-					<div class="col-lg-12" >
+					<div class="col-lg-12">
 						<div class="row ajax-form">
 							<div class="col-md-6">
-								<input class="hover-target" name="name" type="text" placeholder="Your Name: *" autocomplete="off"/>
-							</div>	
+								<input class="hover-target" name="name" type="text" placeholder="Your Name: *"
+									autocomplete="off" />
+							</div>
 							<div class="col-md-6 mt-4 mt-md-0">
-								<input class="hover-target" name="email" type="email" placeholder="E-Mail: *" autocomplete="off"/>
-							</div>	
+								<input class="hover-target" name="email" type="email" placeholder="E-Mail: *"
+									autocomplete="off" />
+							</div>
 							<div class="col-md-6 mt-4">
-								<input class="hover-target" name="phone" type="tel" placeholder="Phone Number:" autocomplete="off"/>
-							</div>	
+								<input class="hover-target" name="phone" type="tel" placeholder="Phone Number:"
+									autocomplete="off" />
+							</div>
 							<div class="col-md-6 mt-4">
-								<input class="hover-target" name="location" type="text" placeholder="City, Country:" autocomplete="off"/>
+								<input class="hover-target" name="location" type="text" placeholder="City, Country:"
+									autocomplete="off" />
 							</div>
 							<div class="col-md-12 mt-4">
 								<textarea class="hover-target" name="message" placeholder="Message *"></textarea>
@@ -137,54 +154,84 @@
 									<button class="hover-target" id="send" data-lang="en"><span>submit</span></button>
 								</center>
 							</div>
-						</div>	
+						</div>
 					</div>
-				</div>		
-			</div>				
+				</div>
+			</div>
 		</div>
 
-		<div class="section padding-top-bottom over-hide z-bigger background-dark-3 footer" oncontextmenu="return false" onkeydown="return false;" onmousedown="return false;">
-			<div class="shadow-on-footer" data-scroll-reveal="enter bottom move 30px over 0.5s after 0.1s">codewithchin@gmail.com</div>
+		<div class="section padding-bottom-big over-hide z-bigger" oncontextmenu="return false"
+			onkeydown="return false;" onmousedown="return false;">
+			<div class="container">
+				<div class="row px-5 px-xl-2 justify-content-center">
+					<div class="col-lg-12 mb-5 text-center">
+						<h5 class="mb-3" style="font-weight: bold; font-size: x-large"><u>Social Handles</u></h5>
+					</div>
+					<div class="col-md-4 mb-5 text-center"
+						data-scroll-reveal="enter bottom move 30px over 0.5s after 0.2s">
+						<h2 class="mb-3 fa fa-instagram"></h2>
+						<h5 class="mb-3">Instagram</h5>
+						<p class="mb-0 pb-0"><a
+								href="https://www.instagram.com/_theguywithglasses_">@_theguywithglasses_</a></p>
+					</div>
+					<div class="col-md-4 mb-5 text-center"
+						data-scroll-reveal="enter bottom move 30px over 0.5s after 0.2s">
+						<h2 class="mb-3 fa fa-github"></h2>
+						<h5 class="mb-3">GitHub</h5>
+						<p class="mb-0 pb-0"><a href="https://www.github.com/cmulay">@cmulay</a></p>
+					</div>
+					<div class="col-md-4 mb-5 text-center"
+						data-scroll-reveal="enter bottom move 30px over 0.5s after 0.2s">
+						<h2 class="mb-3 fa fa-linkedin"></h2>
+						<h5 class="mb-3">LinkedIn</h5>
+						<p class="mb-0 pb-0"><a href="www.linkedin.com/in/cmulay17">@cmulay17</a></p>
+					</div>
+
+				</div>
+			</div>
+		</div>
+
+		<div class="section padding-top-bottom over-hide z-bigger background-dark-3 footer" oncontextmenu="return false"
+			onkeydown="return false;" onmousedown="return false;">
+			<div class="shadow-on-footer" data-scroll-reveal="enter bottom move 30px over 0.5s after 0.1s">
+				codewithchin@gmail.com</div>
 			<div class="container" data-scroll-reveal="enter bottom move 20px over 0.5s after 0.4s">
 				<div class="row">
 					<div class="col-12 text-center z-bigger py-5">
 						<div class="footer-lines">
-							<a href="mailto:codewithchin@gmail.com" class="hover-target"><h4>Email Me</h4></a>
+							<a href="mailto:codewithchin@gmail.com" class="hover-target">
+								<h4>Email Me</h4>
+							</a>
 						</div>
 					</div>
 				</div>
-			</div>		
-		</div>	
-		
-		<!-- Social links
+			</div>
+		</div>
+
+		<!-- Scroll to top
 		================================================== -->
-		
-		<div class="social-fixed fa fa-github" oncontextmenu="return false" onkeydown="return false;" onmousedown="return false;">
-			<a href="https://github.com/cmulay" class="hover-target">GitHub</a>
-		</div>
-		<div class="copyr" oncontextmenu="return false" onkeydown="return false;" onmousedown="return false;">
-			2020 © <a href="https://github.com/cmulay" class="hover-target">Chinmay Mulay</a>
-		</div>
-		<div class="scroll-to-top hover-target" oncontextmenu="return false" onkeydown="return false;" onmousedown="return false;"></div>
-		
+
+		<div class="scroll-to-top hover-target"></div>
+
 		<!-- Page cursor
 		================================================== -->
-		
-        <div class='cursor' id="cursor"></div>
-        <div class='cursor2' id="cursor2"></div>
-        <div class='cursor3' id="cursor3"></div>		
-		
+
+		<div class='cursor' id="cursor"></div>
+		<div class='cursor2' id="cursor2"></div>
+		<div class='cursor3' id="cursor3"></div>
+
 	</div>
 
 	<!-- JAVASCRIPT
     ================================================== -->
 	<script src="js/jquery.min.js"></script>
-	<script src="js/popper.min.js"></script> 
+	<script src="js/popper.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
-	<script src="js/plugins.js"></script> 
-	<script src="js/custom.js"></script>  
+	<script src="js/plugins.js"></script>
+	<script src="js/custom.js"></script>
 
-<!-- End Document
+	<!-- End Document
 ================================================== -->
 </body>
+
 </html>
